# gemini-summary-embedding

./: .gitignore  README.md  cluster.py  embed.py  loaddb.py  pyproject.toml
01_start/: cluster.py  embed.py  loaddb.py  pyproject.toml
02_gpu/: README.md  main.py  pyproject.toml
tests/: test_smoke.py
